--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -179,50 +179,22 @@
               <img
                 draggable="false"
                 class="tilt"
-                src="./assets/images/projects/mytelkomsel-banner.png"
+                src="./assets/images/projects/mytelkomsel-home.png"
                 alt=""
               />
             </div>
             <div class="content">
-              <h3>MyTelkomsel</h3>
+              <h3>First</h3>
               <span class="tag">Slicing UI</span>
               <p>
-                MyTelkomsel is a mobile application published by Telkomsel.
-                MyTelkomsel Slicing UI uses the Flutter Framework which is 
-                a display that fits the application. In slicing UI, 
-                it is divided into sections for each module.
+                This is the main page of the "MyTelkomsel" application. 
+                on this page there are several information sections displayed, namely user information such as internet, 
+                sms, telephone, package information and some interesting information from Telkomsel.
               </p>
             </div>
           </div>
         <!-- </div> -->
-      <!-- </div> -->
-      <!-- detail banner end-->
-      <!-- detail banner -->
-      <!-- <div class="box-container">
-        <div class="box"> -->
-          <div class="row">               
-            <div class="content">
-              <h3>MyTelkomsel</h3>
-              <span class="tag">Slicing UI</span>
-              <p>
-                MyTelkomsel is a mobile application published by Telkomsel.
-                MyTelkomsel Slicing UI uses the Flutter Framework which is 
-                a display that fits the application. In slicing UI, 
-                it is divided into sections for each module.
-              </p>
-            </div>
-            <div class="image">
-              <img
-                draggable="false"
-                class="tilt"
-                src="./assets/images/projects/mytelkomsel-banner.png"
-                alt=""
-              />
-            </div>
-          </div>
-        <!-- </div>
-      </div> -->
-      <!-- detail banner end-->
+      <!-- </div> -->            
     </section>
     <!-- detail section end -->
 
