--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -37,9 +37,9 @@
   <img draggable="false" src="./assets/images/preloader.gif" alt="">
 </div> -->
 
-    <!-- navbar starts -->
+    <!-- navbar starts -->    
     <header>
-      <a href="/" class="logo"><i class="fab fa-node-js"></i> Indrat Saputra</a>
+      <a href="/" class="logo"><i class="fa-thin fa-user-bounty-hunter"></i> Indrat Saputra</a>
 
       <div id="menu" class="fas fa-bars"></div>
       <!-- <nav class="navbar">
