--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
     <!-- navbar starts -->
     <header>
-      <a href="/" class="logo"><i class="fab fa-node-js"></i> Indrat</a>
+      <a href="/" class="logo"
+        ><i class="fa-thin fa-user-bounty-hunter"></i> Indrat Saputra</a
+      >
 
       <div id="menu" class="fas fa-bars"></div>
       <nav class="navbar">
