--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -175,13 +175,15 @@
       <!-- <div class="box-container">
         <div class="box"> -->
           <div class="row"> 
-            <div class="image">
-              <img
-                draggable="false"
-                class="tilt"
-                src="./assets/images/projects/mytelkomsel-home.png"
-                alt=""
-              />
+            <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-home.png"
+                  alt=""
+                />
+              </div>
             </div>
             <div class="content">
               <h3>First</h3>
