--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -151,8 +151,6 @@
       <h2 class="heading">
         <i class="fas fa-user-alt"></i> Slicing UI | <span>MyTelkomsel</span>
       </h2>
-
-      
       <div class="container">
         <!-- banner -->
         <div class="content">
@@ -171,9 +169,7 @@
 
     <!-- detail section  -->
     <section class="detailcontent" id="detailcontent">
-      <!-- detail banner -->
-      <!-- <div class="box-container">
-        <div class="box"> -->
+      <!-- detail banner -->            
           <div class="row"> 
             <div class="box-container">            
               <div class="image">
@@ -195,6 +191,79 @@
               </p>
             </div>
           </div>
+          <!-- info 2 -->
+          <div class="row">             
+            <div class="content">
+              <h3>First</h3>
+              <span class="tag">Internet Package Screen</span>
+              <p>
+                Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
+                Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
+                Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
+              </p>
+            </div>
+            <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <!-- info 2 end -->
+          <!-- info 3 -->
+          <div class="row"> 
+            <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-search.png"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="content">
+              <h3>First</h3>
+              <span class="tag">Search Screen</span>
+              <p>
+                Search Screen, Search Screen, Search Screen, Search Screen, Search Screen, Search Screen, 
+                Search Screen, Search Screen, Search Screen, Search Screen, 
+                Search Screen, Search Screen, Search Screen, Search Screen, Search Screen, 
+                Search Screen, Search Screen, Search Screen, 
+              </p>
+            </div>
+          </div>
+          <!-- info 3 end -->
+          <!-- info 4 -->
+          <div class="row">             
+            <div class="content">
+              <h3>First</h3>
+              <span class="tag">Others Screen</span>
+              <p>
+                Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, 
+                Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, 
+                Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, 
+                Others Screen, Others Screen, 
+                Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, 
+              </p>
+            </div>
+            <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-others.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <!-- info 4 end -->
+
         <!-- </div> -->
       <!-- </div> -->            
     </section>
