--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -193,7 +193,7 @@
           </div>
           <!-- info 2 -->
           <div class="row">             
-            <div class="content">
+            <!-- <div class="content">
               <h3>First</h3>
               <span class="tag">Internet Package Screen</span>
               <p>
@@ -201,6 +201,16 @@
                 Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
                 Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
               </p>
+            </div> -->
+            <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              </div>
             </div>
             <div class="box-container">            
               <div class="image">
