penambahan dan perubahan 37

--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -202,7 +202,78 @@
                 Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
               </p>
             </div> -->
-            <div class="box-container">            
+            <div class="box-container">
+              <div class="grid-item ${project.category}">
+                <div class="box tilt" style="width: 300px; margin: 1rem">
+                  <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              <!-- <img draggable="false" src="/assets/images/projects/${project.image}.png" alt="project" /> -->
+              <!-- <div class="content">
+                <div class="tag">
+                <h3>${project.category} - ${project.name}</h3>
+                </div>
+                <div class="desc">
+                  <p>${project.desc}</p>
+                  <div class="btns">
+                    <a href="${project.links.view}" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>            
+                    <a href="${project.links.view}" class="btn" ><i class="fas fa-eye"></i> View</a>                        
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            <div class="box-container">
+              <div class="grid-item ${project.category}">
+                <div class="box tilt" style="width: 300px; margin: 1rem">
+                  <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              <!-- <img draggable="false" src="/assets/images/projects/${project.image}.png" alt="project" /> -->
+              <!-- <div class="content">
+                <div class="tag">
+                <h3>${project.category} - ${project.name}</h3>
+                </div>
+                <div class="desc">
+                  <p>${project.desc}</p>
+                  <div class="btns">
+                    <a href="${project.links.view}" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>            
+                    <a href="${project.links.view}" class="btn" ><i class="fas fa-eye"></i> View</a>                        
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            <div class="box-container">
+              <div class="grid-item ${project.category}">
+                <div class="box tilt" style="width: 300px; margin: 1rem">
+                  <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              <!-- <img draggable="false" src="/assets/images/projects/${project.image}.png" alt="project" /> -->
+              <!-- <div class="content">
+                <div class="tag">
+                <h3>${project.category} - ${project.name}</h3>
+                </div>
+                <div class="desc">
+                  <p>${project.desc}</p>
+                  <div class="btns">
+                    <a href="${project.links.view}" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>            
+                    <a href="${project.links.view}" class="btn" ><i class="fas fa-eye"></i> View</a>                        
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            </div>
+            </div>
+            <!-- <div class="box-container">            
               <div class="image">
                 <img
                   draggable="false"
@@ -211,8 +282,8 @@
                   alt=""
                 />
               </div>
-            </div>
-            <div class="box-container">            
+            </div> -->
+            <!-- <div class="box-container">            
               <div class="image">
                 <img
                   draggable="false"
@@ -221,7 +292,7 @@
                   alt=""
                 />
               </div>
-            </div>
+            </div> -->
           </div>
           <!-- info 2 end -->
           <!-- info 3 -->
