penambahan dan perubahan 38

--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -192,7 +192,7 @@
             </div>
           </div>
           <!-- info 2 -->
-          <div class="row">             
+          <!-- <div class="row">              -->
             <!-- <div class="content">
               <h3>First</h3>
               <span class="tag">Internet Package Screen</span>
@@ -293,7 +293,7 @@
                 />
               </div>
             </div> -->
-          </div>
+          <!-- </div> -->
           <!-- info 2 end -->
           <!-- info 3 -->
           <div class="row"> 
