penambahan dan perubahan 39

--- a/mytelkomsel_backup.html
+++ b/mytelkomsel_backup.html
@@ -56,6 +56,96 @@
     </header>
     <!-- navbar ends -->
 
+    <!-- hero section starts -->
+    <!-- <section class="home" id="home">
+      <div id="particles-js"></div>
+
+      <div class="content">
+        <h2>
+          Hi, <br />
+          I'm Indrat <span>Saputra</span>
+        </h2>
+        <p>i'm <span class="typing-text"></span></p>
+        <a href="#about" class="btn"
+          ><span>About Me</span>
+          <i class="fas fa-arrow-circle-down"></i>
+        </a>
+        <div class="socials">
+          <ul class="social-icons">
+            <li>
+              <a
+                class="linkedin"
+                aria-label="LinkedIn"
+                href="https://id.linkedin.com/in/indrat-saputra-40a08b190/"
+                target="_blank"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                class="github"
+                aria-label="GitHub"
+                href="https://github.com/indratdev"
+                target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="image">
+        <img
+          draggable="false"
+          class="tilt"
+          src="./assets/images/hero.png"
+          alt=""
+        />
+      </div>
+    </section> -->
+    <!-- hero section ends -->
+
+    <!-- about section starts -->
+    <!-- <section class="about" id="about">
+      <h2 class="heading">
+        <i class="fas fa-user-alt"></i> About <span>Me</span>
+      </h2>
+
+      <div class="row">
+        <div class="image">
+          <img
+            draggable="false"
+            class="tilt"
+            src="./assets/images/profile2.jpg"
+            alt=""
+          />
+        </div>
+        <div class="content">
+          <h3>I'm Indrat Saputra</h3>
+          <span class="tag">Mobile Developer</span>
+          <p>
+            I'm a Mobile Developer specialized in building mobile application
+            with a big interest in pure Dart & Flutter. I am very passionate
+            about improving my coding skills & developing application.
+          </p>
+
+          <div class="box-container">
+            <div class="box">
+              <p><span> email : </span> indrat.dev@gmail.com</p>
+              <p><span> place : </span> Indonesia</p>
+            </div>
+          </div>
+
+          <div class="resumebtn">
+            <a href="#" class="btn"
+              ><span>Resume</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- about section ends -->
+
     <!-- content section -->
     <section class="about" id="about">
       <h2 class="heading">
@@ -79,22 +169,184 @@
 
     <!-- detail section  -->
     <section class="detailcontent" id="detailcontent">
-      <div class="slider-container">
-        <div class="slider">
-          <img src="https://picsum.photos/id/1052/150/150" alt="">
-          <img src="https://picsum.photos/id/1052/150/150" alt="">
-          <img src="https://picsum.photos/id/1052/150/150" alt="">
-          <img src="https://picsum.photos/id/1052/150/150" alt="">
-          <img src="https://picsum.photos/id/1052/150/150" alt="">
-        </div>
-        <div class="thumbnails">
-          <img src="https://picsum.photos/id/1049/150/150" alt="">
-          <img src="https://picsum.photos/id/1049/150/150" alt="">
-          <img src="https://picsum.photos/id/1049/150/150" alt="">
-          <img src="https://picsum.photos/id/1049/150/150" alt="">
-          <img src="https://picsum.photos/id/1049/150/150" alt="">
-        </div>
-      </div>      
+      <!-- detail banner -->            
+          <div class="row"> 
+            <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-home.png"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="content">
+              <h3>First</h3>
+              <span class="tag">Slicing UI</span>
+              <p>
+                This is the main page of the "MyTelkomsel" application. 
+                on this page there are several information sections displayed, namely user information such as internet, 
+                sms, telephone, package information and some interesting information from Telkomsel.
+              </p>
+            </div>
+          </div>
+          <!-- info 2 -->
+          <!-- <div class="row">              -->
+            <!-- <div class="content">
+              <h3>First</h3>
+              <span class="tag">Internet Package Screen</span>
+              <p>
+                Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
+                Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
+                Internet Package Screen, Internet Package Screen, Internet Package Screen, Internet Package Screen, 
+              </p>
+            </div> -->
+            <div class="box-container">
+              <div class="grid-item ${project.category}">
+                <div class="box tilt" style="width: 300px; margin: 1rem">
+                  <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              <!-- <img draggable="false" src="/assets/images/projects/${project.image}.png" alt="project" /> -->
+              <!-- <div class="content">
+                <div class="tag">
+                <h3>${project.category} - ${project.name}</h3>
+                </div>
+                <div class="desc">
+                  <p>${project.desc}</p>
+                  <div class="btns">
+                    <a href="${project.links.view}" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>            
+                    <a href="${project.links.view}" class="btn" ><i class="fas fa-eye"></i> View</a>                        
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            <div class="box-container">
+              <div class="grid-item ${project.category}">
+                <div class="box tilt" style="width: 300px; margin: 1rem">
+                  <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              <!-- <img draggable="false" src="/assets/images/projects/${project.image}.png" alt="project" /> -->
+              <!-- <div class="content">
+                <div class="tag">
+                <h3>${project.category} - ${project.name}</h3>
+                </div>
+                <div class="desc">
+                  <p>${project.desc}</p>
+                  <div class="btns">
+                    <a href="${project.links.view}" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>            
+                    <a href="${project.links.view}" class="btn" ><i class="fas fa-eye"></i> View</a>                        
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            <div class="box-container">
+              <div class="grid-item ${project.category}">
+                <div class="box tilt" style="width: 300px; margin: 1rem">
+                  <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              <!-- <img draggable="false" src="/assets/images/projects/${project.image}.png" alt="project" /> -->
+              <!-- <div class="content">
+                <div class="tag">
+                <h3>${project.category} - ${project.name}</h3>
+                </div>
+                <div class="desc">
+                  <p>${project.desc}</p>
+                  <div class="btns">
+                    <a href="${project.links.view}" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>            
+                    <a href="${project.links.view}" class="btn" ><i class="fas fa-eye"></i> View</a>                        
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            </div>
+            </div>
+            <!-- <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              </div>
+            </div> -->
+            <!-- <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-internetpacket.png"
+                  alt=""
+                />
+              </div>
+            </div> -->
+          <!-- </div> -->
+          <!-- info 2 end -->
+          <!-- info 3 -->
+          <div class="row"> 
+            <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-search.png"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="content">
+              <h3>First</h3>
+              <span class="tag">Search Screen</span>
+              <p>
+                Search Screen, Search Screen, Search Screen, Search Screen, Search Screen, Search Screen, 
+                Search Screen, Search Screen, Search Screen, Search Screen, 
+                Search Screen, Search Screen, Search Screen, Search Screen, Search Screen, 
+                Search Screen, Search Screen, Search Screen, 
+              </p>
+            </div>
+          </div>
+          <!-- info 3 end -->
+          <!-- info 4 -->
+          <div class="row">             
+            <div class="content">
+              <h3>First</h3>
+              <span class="tag">Others Screen</span>
+              <p>
+                Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, 
+                Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, 
+                Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, 
+                Others Screen, Others Screen, 
+                Others Screen, Others Screen, Others Screen, Others Screen, Others Screen, 
+              </p>
+            </div>
+            <div class="box-container">            
+              <div class="image">
+                <img
+                  draggable="false"
+                  class="tilt"
+                  src="./assets/images/projects/mytelkomsel-others.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <!-- info 4 end -->
+
+        <!-- </div> -->
+      <!-- </div> -->            
     </section>
     <!-- detail section end -->
 
