--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -79,61 +79,42 @@
 
     <!-- detail section  -->
     <section class="detailcontent" id="detailcontent">
-      <div id="carouselExampleCaptions" class="carousel slide" data-mdb-ride="carousel">
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-mdb-target="#carouselExampleCaptions"
-            data-mdb-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-mdb-target="#carouselExampleCaptions"
-            data-mdb-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-mdb-target="#carouselExampleCaptions"
-            data-mdb-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp" class="d-block w-100" alt="Wild Landscape"/>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            <div class="carousel-item active">
+                <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://mdbcdn.b-cdn.net/img/new/slides/042.webp" class="d-block w-100" alt="Camera"/>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="carousel-item">
+                <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://mdbcdn.b-cdn.net/img/new/slides/043.webp" class="d-block w-100" alt="Exotic Fruits"/>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <div class="carousel-item">
+                <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
             </div>
-          </div>
+            <div class="carousel-item">
+                <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
+            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+    </div>
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
+            <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
+        </li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1">
+            <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
+        </li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2">
+            <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
+        </li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3">
+            <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
+        </li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4">
+            <img src="./assets/images/projects/mytelkomsel-banner.png" class="d-block w-100">
+        </li>
+    </ol>
     </section>
     <!-- detail section end -->
 
