penambahan dan perubahan 49

--- a/mytelkomsel.html
+++ b/mytelkomsel.html
@@ -79,10 +79,10 @@
 
     <!-- detail section  -->
    
-    <section class="detailcontent" id="detailcontent">
-      <h2 class="heading">
+    <!-- <section class="detailcontent" id="detailcontent"> -->
+      <!-- <h2 class="heading">
         <i class="fas fa-user-alt"></i> Slicing UI | <span>MyTelkomsel</span>
-      </h2>
+      </h2> -->
       <!-- Place somewhere in the <body> of your page -->
 <div id="slider" class="flexslider">
   <ul class="slides">
@@ -150,7 +150,7 @@
     <!-- items mirrored twice, total of 12 -->
   </ul>
 </div>
-    </section>
+    <!-- </section> -->
     <!-- detail section end -->
 
     <!-- skills section starts -->
